# Felis

./: .gitignore  Cargo.toml  checkpoint.txt  test.py
c2/: Cargo.toml
c2/src/: command.rs  crypto.rs  database.rs  main.rs  server.rs  session.rs
c2/src/handlers/: beacon.rs  command.rs  mod.rs  session.rs
config/: Cargo.toml
config/src/: main.rs
