[workspace]
members = ["c2"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
anyhow = "1"
log = "0.4"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.30", features = ["bundled"] }
