[package]
name = "felis"
version.workspace = true
edition.workspace = true

[[bin]]
name = "felis"
path = "src/main.rs"

[[bin]]
name = "felis-mock-client"
path = "src/bin/mock_client.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower-http.workspace = true
aes-gcm.workspace = true
sha2.workspace = true
rand.workspace = true
anyhow.workspace = true
log.workspace = true
chrono.workspace = true
uuid.workspace = true
clap.workspace = true
env_logger.workspace = true

# Database
rusqlite.workspace = true
