[package]
name = "config"
version.workspace = true
edition.workspace = true

[[bin]]
name = "config"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
dialoguer = "0.11"
indicatif = "0.17"
env_logger.workspace = true